--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- HEADER -->
 
     <header>
-      <section class="header-top row">
-        <div class="container">
+      <section class="header-top">
+        <div class="container clearfix">
           <div class="float-left">
             <i class="fas fa-globe-europe"></i>
             <a href="#" class="links" name="Lingua">
@@ -32,8 +32,8 @@
         </div>
       </section>
 
-      <section class="header-bot row">
-        <div class="container">
+      <section class="header-bot">
+        <div class="container clearfix">
           <a href="#"><img id="logo" src="img/logo.svg" alt="logo"></a>
           <nav class="main-nav">
             <ul class="ul-line">
@@ -90,8 +90,8 @@
             </section>
           </div>
           <!-- SEZIONE ROW UNO -->
-            <div class="container">
-              <section class="row-uno">
+          <div class="container">
+            <section class="row-uno clearfix">
               <aside class="leftbox-row-uno">
                 <img class="image-inside-box" src="img/book.svg" alt="img-libro">
                 <div class="button-row-uno">
@@ -113,7 +113,7 @@
           </div>
           <!-- SEZIONE ROW 2 -->
           <section class="row-due">
-            <div class="container">
+            <div class="container clearfix">
               <aside class="leftbox-row-due">
                 <div class="centratura">
                   <img class="images-row-2" src="img/marketing.svg" alt="">
@@ -181,48 +181,48 @@
         <!-- SEZIONE ROW 3 -->
         <section class="row-tre">
           <div class="container">
-            <div class="table-section">
+            <div class="table-section clearfix">
               <h2>Learn and grow with award-winning support and a hriving community behind you.</h2>
               <p>
                 You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.
               </p>
               <div class="border-bot-right">
-                <img class="image-row-tre" src="img/homepage_community_agency.svg" alt="">
+                <img class="image-row-tre min-height" src="img/homepage_community_agency.svg" alt="">
                 <h3>150+</h3>
                 <p>Hubspot user groups </p>
               </div>
               <div class="border-bot-right">
-                <img class="image-row-tre" src="img/homepage_community_blog.svg" alt="">
+                <img class="image-row-tre min-height" src="img/homepage_community_blog.svg" alt="">
                 <h3>4.5M+</h3>
                 <p>monthly visits </p>
               </div>
               <div class="border-bot-right">
-                <img class="image-row-tre" src="img/homepage_community_academy.svg" alt="">
+                <img class="image-row-tre min-height" src="img/homepage_community_academy.svg" alt="">
                 <h3>155K+</h3>
                 <p>certified professionals </p>
               </div>
               <div class="border-bottom">
-                <img class="image-row-tre" src="img/homepage_community_inbound.svg" alt="">
+                <img class="image-row-tre min-height" src="img/homepage_community_inbound.svg" alt="">
                 <h3>21K+</h3>
                 <p>registered attendees </p>
               </div>
               <div class="border-right">
-                <img class="image-row-tre" src="img/homepage_community_connect.svg" alt="">
+                <img class="image-row-tre min-height" src="img/homepage_community_connect.svg" alt="">
                 <h3>200+</h3>
                 <p>Integrations </p>
               </div>
               <div class="border-right">
-                <img class="image-row-tre" src="img/homepage_community_globe.svg" alt="">
+                <img class="image-row-tre min-height" src="img/homepage_community_globe.svg" alt="">
                 <h3>6+</h3>
                 <p>languages </p>
               </div>
               <div class="border-right">
-                <img class="image-row-tre" src="img/homepage_community_followers.svg" alt="">
+                <img class="image-row-tre min-height" src="img/homepage_community_followers.svg" alt="">
                 <h3>2.6M+</h3>
                 <p>social followers </p>
               </div>
               <div class="no-border">
-                <img class="image-row-tre" src="img/growthhub-white-small-1.svg" alt="">
+                <img class="image-row-tre min-height" src="img/growthhub-white-small-1.svg" alt="">
                 <h3>5k+</h3>
                 <p>profiles and counting </p>
               </div>
@@ -234,7 +234,7 @@
         <!--SEZIONE TOP ROW 4 -->
         <section class="row-quattro">
           <div class="container">
-            <div class="section-top">
+            <div class="section-top clearfix">
               <aside class="left-row-quattro">
                 <h2>64,500</h2>
                 <p>customers in over <span>100</span></p>
@@ -255,7 +255,7 @@
 
 
             </div>
-            <div class="section-bot">
+            <div class="section-bot clearfix">
               <aside class="left">
                 <h2>Start Growing With HubSpot Today</h2>
                 <p>With tools to make every part of yor process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
@@ -273,7 +273,7 @@
       <!-- FOOTER -->
     <footer>
       <div class="container">
-        <section class="row-cinque">
+        <section class="row-cinque clearfix">
           <div class="footer-block">
             <h3>Increase your traffic</h3>
             <ul class="ul-footer1">
@@ -325,7 +325,7 @@
             </ul>
           </div>
         </section>
-        <section class="finale">
+        <section class="finale clearfix">
           <ul class="language-list">
             <li><a href="#">English</a></li>
             <li><a href="#">Deutsch</a></li>
@@ -355,7 +355,8 @@
         <p>Ciao! Chiedimi qualcosa!</p>
         <p id="risposta-utente">Non ho nulla da chiedere.</p>
         <p>Allora lasciami in pace che sono stanco!!!</p>
+        <input id="chat-bot" placeholder="Scrivi qui..." type="text" name="chat" value="">
       </div>
     </div>
   </body>
-  </html>
+</html>
